make scrollbar always show to avoid contents shifting

--- a/channelFinder.css
+++ b/channelFinder.css
@@ -1,3 +1,6 @@
+html {
+  overflow-y: scroll;
+}
 #channelName {
   margin-bottom: 1rem;
   font-size: 16px;
